<resources>
    <string name="app_name">Project1</string>
    <string name="teks_kalkulator">Masukkan Dua Angka</string>
    <string name="teks_angka1">Angka Pertama</string>
    <string name="teks_angka2">Angka Kedua</string>
    <string name="teks_plus">+</string>
    <string name="teks_minus">-</string>
    <string name="teks_kali">x</string>
    <string name="teks_bagi">/</string>
    <string name="teks_bersihkan">BERSIHKAN</string>
    <string name="txthasil">Hasil\n%1$.2f</string>
    <string name="teks_menu3">Daftar Negara</string>
    <string name="teks_menu1">Nama</string>
    <string name="teks_menu2">Kalkulator</string>
    <string name="teks_input_nama">Masukkan Nama Anda</string>
    <string name="btn_tampil">Tampilkan</string>
    <string name="teks_awal1">Andrico Halim Kelas JMP-A</string>
    <string name="teks_awal2">Universitas Telkom</string>


    <string-array name="daftar_negara">
        <item>Indonesia</item>
        <item>Malaysia</item>
        <item>Singapore</item>
        <item>Italia</item>
        <item>Inggris</item>
        <item>Belanda</item>
        <item>Argentina</item>
        <item>Chile</item>
        <item>Mesir</item>
        <item>Uganda</item>
    </string-array>
</resources>